--- a/Bold.WebAPI/bin/Bold.WebAPI.dll.config
+++ b/Bold.WebAPI/bin/Bold.WebAPI.dll.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="ServiceEndpoint" value="http://OC_DEVELOP:8132/DataService.Server.svc" />
+    <add key="ServiceEndpoint" value="http://localhost:7132/DataService.Server.svc" />
+    <add key="BoldUsername" value="mikael" />
+    <add key="BoldPassword" value="welcome" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -60,6 +62,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="GrapeCity.ActiveReports.Export.Excel.v9" publicKeyToken="cc4967777c49a3ff" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.3.4300.0" newVersion="9.3.4300.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
